2007-10-26  Per Abrahamsen  <abraham@dina.kvl.dk>

	* rootdens_GP1D.C: New model.
	* Makefile (MODELS): Added it.

2007-09-11  Per Abrahamsen  <abraham@dina.kvl.dk>

	* Made 'Path' a class.

2007-09-07  Per Abrahamsen  <abraham@dina.kvl.dk>

	* Version 4.21 released.

2007-09-03  Per Abrahamsen  <abraham@dina.kvl.dk>

	* number_plf.C: New model.
	* Makefile (MODELS): Added it.

2007-08-30  Per Abrahamsen  <abraham@dina.kvl.dk>

	* parser_file.C (load_list): Made user specified dimension optional. 

2007-08-29  Birgitte Gjettermann  <bgj@kvl.dk>

	* rubiscoNdist_forced.C: New model. 

2007-08-24  Per Abrahamsen  <abraham@dina.kvl.dk>

	* Version 4.20 released.

2007-08-24  Per Abrahamsen  <abraham@dina.kvl.dk>

	* action_extern.C (extern_fertigation): New model.

2007-08-23  Per Abrahamsen  <abraham@dina.kvl.dk>

	* Version 4.19 released.

2007-08-23  Per Abrahamsen  <abraham@dina.kvl.dk>

	* select* (output_array): Take vegetation parameter.
	* log.C, log.h (open_geo): Take vegetation paramater.
	* column_std.C (output): Use it.

	* select_volume.C (min_root_density, crop): New parameters.

2007-08-22  Per Abrahamsen  <abraham@dina.kvl.dk>

	* select_volume.C (water_interval, water_volume): New models.

2007-08-20  Per Abrahamsen  <abraham@dina.kvl.dk>

	* action_with.C (done): Done when all actions are done.
	* action_lisp.C (ActionProgn::done): Ditto.

2007-08-20  Birgitte Gjettermann  <bgj@kvl.dk>

	* cdaisy.C, cdaisy.h (daisy_column_get_description): New function.
	
2007-08-15  Per Abrahamsen  <abraham@dina.kvl.dk>

	* cdaisy.C, cdaisy.h (daisy_column_location_size)
	(daisy_column_location_x, daisy_column_location_y): New functions.

2007-08-14  Per Abrahamsen  <abraham@dina.kvl.dk>

	* column.C, column.h (location): New parameter.

2007-07-27  Per Abrahamsen  <abraham@dina.kvl.dk>

	* depth.C (DepthExtern): New model.

2007-07-13  Per Abrahamsen  <abraham@dina.kvl.dk>

	* Version 4.18 released.

2007-07-13  Per Abrahamsen  <abraham@dina.kvl.dk>
